# WayWise

./: .dockerignore  .gitignore  .gitmodules  CITATION.cff  DOCKER.md  Dockerfile  README.md  bno055orientationupdater.cpp  bno055orientationupdater.h  carmovementcontroller.cpp  carmovementcontroller.h  carstate.cpp  carstate.h  coordinatetransforms.h  copterstate.cpp  copterstate.h  depthaicamera.cpp  depthaicamera.h  diffdrivemovementcontroller.cpp  diffdrivemovementcontroller.h  diffdrivevehiclestate.cpp  diffdrivevehiclestate.h  docker-compose.yaml  docker-compose.yml  imuorientationupdater.cpp  imuorientationupdater.h  jsonstreamparsertcp.cpp  jsonstreamparsertcp.h  mapwidget.cpp  mapwidget.h  motorcontroller.cpp  motorcontroller.h  movementcontroller.cpp  movementcontroller.h  objectstate.cpp  objectstate.h  pospoint.cpp  pospoint.h  pozyxpositionupdater.cpp  pozyxpositionupdater.h  (+18 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-build-push.yml  docker-ghcr-build-push.yaml  docker-ghcr-build-push.yml  main.yml
CANopen/: canopencontrollerinterface.cpp  canopencontrollerinterface.h  canopenmotorcontroller.cpp  canopenmotorcontroller.h  canopenmovementcontroller.cpp  canopenmovementcontroller.h  cpp-slave.eds  slave.cpp  slave.h
CANopen/misc/: README  seeed-can-fd-hat-v2-mod-overlay.dts  seeed-can-fd-hat-v2-mod.dtbo
autopilot/: emergencybrake.cpp  emergencybrake.h  followpoint.cpp  followpoint.h  gotowaypointfollower.cpp  gotowaypointfollower.h  multiwaypointfollower.cpp  multiwaypointfollower.h  purepursuitwaypointfollower.cpp  purepursuitwaypointfollower.h  purepursuitwaypointfollowerwithtrailer.cpp  purepursuitwaypointfollowerwithtrailer.h  waypointfollower.cpp  waypointfollower.h
communication/: TCPClient.cpp  TCPClient.h  jsonstreamparsertcp.cpp  jsonstreamparsertcp.h  mavlinkparameterserver.cpp  mavlinkparameterserver.h  mavsdkvehicleserver.cpp  mavsdkvehicleserver.h  parameterserver.cpp  parameterserver.h  vehicleserver.h
communication/CANopen/: canopencontrollerinterface.cpp  canopencontrollerinterface.h  canopenmovementcontroller.cpp  canopenmovementcontroller.h  cpp-slave.eds  slave.cpp  slave.h
communication/vehicleconnections/: mavsdkstation.cpp  mavsdkstation.h  mavsdkvehicleconnection.cpp  mavsdkvehicleconnection.h  vehicleconnection.cpp  vehicleconnection.h
core/: coordinatetransforms.h  geometry.h  pospoint.cpp  pospoint.h  simplewatchdog.cpp  simplewatchdog.h  vbytearray.cpp
examples/: CMakeLists.txt  README.md
examples/RCCar_ISO22133_autopilot/: CMakeLists.txt  README.md  main.cpp
examples/RCCar_MAVLINK_autopilot/: CMakeLists.txt  README.md  main.cpp
examples/map_local_twocars/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
ext/pi-bno055/: getbno055.h  i2c_bno055.c
ext/vesc/: commands.cpp  commands.h  configparam.h  configparams.h  datatypes.h  packet.cpp  packet.h  vescpacket.h
gnss/: coordinate_transforms.h  rtcm3_simple.h  rtcmclient.cpp  rtcmclient.h  ublox.cpp  ublox.h  ublox_basestation.cpp  ublox_basestation.h  ubloxrover.cpp  ubloxrover.h
legacy/: datatypes.h  locpoint.cpp  locpoint.h  packet.cpp  packetinterface.cpp  packetinterface.h  packetinterfacetcpserver.cpp  packetinterfacetcpserver.h  tcpserversimple.cpp
logger/: groundstationlogger.cpp  groundstationlogger.h  groundstationlogsignalrelay.h  logger.cpp  logger.h  vehiclelogger.cpp  vehiclelogger.h  vehiclelogsignalrelay.h
routeplanning/: routeutils.cpp  routeutils.h  zigzagroutegenerator.cpp  zigzagroutegenerator.h
sensors/angle/: ReadStartStopPos.sh  SetStartPosition.sh  anglesensorupdater.cpp  anglesensorupdater.h  as5600updater.cpp  as5600updater.h
sensors/camera/: depthaicamera.cpp  depthaicamera.h  gimbal.h  mavsdkgimbal.cpp  mavsdkgimbal.h
sensors/fusion/: sdvpvehiclepositionfuser.cpp  sdvpvehiclepositionfuser.h
sensors/gnss/: gnssreceiver.cpp  gnssreceiver.h  rtcm3_simple.cpp  rtcm3_simple.h  rtcmclient.cpp  rtcmclient.h  ublox.cpp  ublox.h  (+4 more)
tools/: docker_create_amd64-deb.sh  try_build_all_cpp.sh
userinterface/: cameragimbalui.cpp  cameragimbalui.h  cameragimbalui.ui  driveui.cpp  driveui.h  driveui.ui  flyui.cpp  flyui.h  flyui.ui  planui.cpp  planui.h  planui.ui  routegeneratorui.cpp  routegeneratorui.h  routegeneratorui.ui  routegeneratorzigzagui.cpp  routegeneratorzigzagui.h  routegeneratorzigzagui.ui  serialportdialog.cpp  serialportdialog.h  serialportdialog.ui  traceui.cpp  traceui.h  traceui.ui  ubloxbasestationui.cpp  ubloxbasestationui.h  ubloxbasestationui.ui  vehicleparameterui.cpp  vehicleparameterui.h  vehicleparameterui.ui
vehicles/: carstate.cpp  carstate.h  copterstate.cpp  copterstate.h  diffdrivevehiclestate.cpp  diffdrivevehiclestate.h  objectstate.cpp  objectstate.h  trailerstate.cpp  trailerstate.h  truckstate.cpp  truckstate.h  vehiclelighting.cpp  vehiclelighting.h  vehiclestate.cpp  vehiclestate.h
(+44 files in other folders)
